syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Student{
	rpc GetStudentInfo(StudentLookupModel) returns (StudentModel);
	rpc GetStudents (NewStudentRequest) returns (stream StudentModel);
}

message NewStudentRequest{

}

message StudentLookupModel{
	int32 studentId = 1;
}

message StudentModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}